--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -42,19 +42,37 @@
             android:textSize="18sp"/>
     </RadioGroup>
 
-    <!-- 金额输入框 -->
-    <com.google.android.material.textfield.TextInputLayout
+    <!-- 金额输入区域 -->
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="金额 (元)"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:layout_marginBottom="15dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_amount"
-            android:layout_width="match_parent"
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="numberDecimal" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_weight="1"
+            android:hint="金额 (元)">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_amount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- 识别按钮 -->
+        <ImageButton
+            android:id="@+id/btn_ocr"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@android:drawable/ic_menu_camera"
+            android:background="?android:attr/selectableItemBackground"
+            android:layout_marginStart="10dp"
+            android:scaleType="centerInside"/>
+    </LinearLayout>
 
     <!-- 分类选择 (Spinner) -->
     <TextView
